Fixes z-index of background gradients

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   position: relative;
   padding: 0 20px;
+  z-index: 0;
 }
 
 .container::before {
@@ -14,6 +15,7 @@
   top: 100px;
   background: url("/images/elipse.png");
   background-size: cover;
+  z-index: -1;
 }
 
 .container::after {
@@ -25,6 +27,11 @@
   right: -200px;
   background: url("/images/elipse.png");
   background-size: cover;
+  z-index: -1;
+}
+
+.wrapper {
+  position: relative;
 }
 
 @media screen and (min-width: 73rem) {
